remove content-type from responseStream method + deprecation warning on utow file upload